maybe fixed spacing?

--- a/western-digital-webapp/src/mentee_pages/InteractWithMentor.css
+++ b/western-digital-webapp/src/mentee_pages/InteractWithMentor.css
@@ -1,6 +1,6 @@
 /* Full Page Container */
 .interact-with-mentor{
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
@@ -10,7 +10,9 @@
   justify-content: center;
   /* background-color: #E0E0E0; */
   position: fixed;
-  /* margin-top: 20px; */
+  margin-top: 20px;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 
@@ -133,6 +135,7 @@
   position: fixed;
   right: 46.3%;
   top: 72.3%;
+  left: 10%;
   transform: translateY(-50%);
   width: 400px; /* Fixed width for the container */
   display: flex;
@@ -194,6 +197,7 @@
   position: fixed;
   right: 2%;
   top: 50%;
+  left: 53%;
   transform: translateY(-45%);
   width: 700px; /* Fixed width for the container */
   display: flex;
